<resources>
    <string name="app_name">PingPals</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent_chats">Recent Chats</string>
    <string name="add_chat">Add Chat</string>
    <string name="greeting">Good morning</string>
    <string name="send_message">send_message</string>
    <string name="hint_message">Type a message</string>
    <string name="channel_name">pals_channel</string>
    <string name="channel_description">pals_description</string>

    <string name="enter_callee_id">Enter callee id</string>
    <string name="logged_in_as">Logged in as: </string>
    <string name="call">Call</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="enter_your_id">Enter your user id</string>
    <string name="incoming_call">Incoming call</string>
    <string name="ringing">Ringing</string>
    <string name="end_call">End call</string>
    <string name="answer">Answer</string>
    <string name="decline">Decline</string>
    <string name="let_s_get_you_connected">Let\'s Get You Connected</string>
    <string name="connect_with_people_today">Connect with people today</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="full_name">Full name</string>
    <string name="mobile">Mobile</string>
</resources>